# mlafroce.github.io

./: .gitignore  README.md  _config.yml  archive.md
_includes/: disqus-comments.html  footer.html  header.html  sidebar.html
_layouts/: page.html  post.html
_posts/: 2016-06-29-hello-jekyll.md  2016-07-16-jekyll-and-social-plugins.md  2018-04-28-tutorials-added.md  2019-05-25-desplazando-al-impostor.md  2019-06-11-diseñar-sobrediseñar.md  2020-02-16-proyecto-avr-avogadro.md  2020-02-16-tutorial-dbus.md  2020-07-12-tutorial-deb-package.md  2021-06-21-barba-os.md  2021-06-21-tutorial-ogre-3d.md
css/: theme.scss
js/: site.js
misc/: README.md
misc/consulta-servado/: README.md  servaddo.py
tutorials/es/: index.md
tutorials/es/bibliotecas-gui/qt5/: CMakeLists.txt  readme.md
tutorials/es/bibliotecas-gui/sdl/: CMakeLists.txt  README.md
tutorials/es/bibliotecas-gui/sdl/src/: MainWindow.cpp  SdlWindow.cpp  mainSDL.cpp  mainSdlEvents.cpp  mainSdlHello.cpp
tutorials/es/compilacion/: compilacion.md  readme.md
tutorials/es/compilacion/ej-zip/: Makefile  barFile  fooFile  main.cpp  readme.md
tutorials/es/compilacion/ej0/: Makefile  main.cpp
tutorials/es/compilacion/ej1/: Makefile
tutorials/es/compilacion/ej2/: Makefile  class1.h  class3.cpp  class3.h
tutorials/es/compilacion/ej3/: Makefile  class0.cpp  class0.h  class1.cpp  class2.cpp  class2.h
tutorials/es/compilacion/ej4/: Makefile  main.cpp
tutorials/es/docker/: charla.md  readme.md
tutorials/es/docker-para-que/: Docker-para-que.odp  Docker-para-que.pptx  docker-para-que.md  readme.md
tutorials/es/docker-para-que/demo/: docker-comandos.md
tutorials/es/docker-tecnico/: Docker.odp  readme.md
tutorials/es/docker-tecnico/demo/: readme.md
tutorials/es/formas-documentar/: README.md  formas-documentar.odp
tutorials/es/formas-documentar/src/: 01-contexto.md  02-markup.md  03-markdown.md  04-pandoc.md  05-rst.md  06-latex.md  07-pandoc-2.md  08-notas.md
tutorials/es/introduccion-a-git/: README.md  charla.md  comandos.md  slides.md
tutorials/es/introduccion-programacion/: charla.md  demo-alien.js  demo-alien.py
tutorials/es/qt5/doc/: ejemplos.md
tutorials/es/qt5/ej0/: main.cpp
tutorials/es/qt5/ej1/: main.cpp
tutorials/es/qt5/ej2/: main.cpp
tutorials/es/qt5/sdl-qt/: CMakeLists.txt
tutorials/es/qt5/sdl-qt/.kdev4/: sdl-qt.kdev4
tutorials/es/qt5/sdl-qt/src/: SdlImage.cpp  SdlImage.h  SdlWindow.h  mainQt.cpp
(+33 files in other folders)
